# BarybiansX

./: .gitignore  BarybiansX.pro  CMakeLists.txt  appicon.icns  mainwindow.cpp  mainwindow.h  meditorsplash.cpp  meditorsplash.h  res.qrc
.github/workflows/: codeql-analysis.yml
base/: basefragment.cpp  basefragment.h  basefragmentfactory.cpp  basefragmentfactory.h  basemodel.cpp  basemodel.h  router.cpp  router.h
base/data/: constants.h  data.cpp  data.h
base/utils/: requestx.cpp  requestx.h  webconnector.cpp  webconnector.h  webconnectorx.cpp  webconnectorx.h  webservice.cpp  webservice.h
cwidgets/: cardview.cpp  cardview.h  implfragmentfactory.cpp  implfragmentfactory.h
cwidgets/addition/: EditorWindow.cpp  EditorWindow.h  cardwidget.cpp  cardwidget.h  menuheaderwidget.cpp  menuheaderwidget.h
fragmentts/: dialogfragment.cpp  dialogfragment.h  editorsplashfragment.cpp  editorsplashfragment.h  feedfragment.cpp  feedfragment.h  loginfragment.cpp  loginfragment.h  splashfragment.cpp  splashfragment.h  userfragment.cpp  userfragment.h  userpage.cpp  userpage.h  userpagefragment.cpp  userpagefragment.h
